--- a/index.html
+++ b/index.html
@@ -149,13 +149,19 @@ Architecture: x86-64</p>
       </section>
     </div>
 
-    <!-- FOOTER  -->
+  <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
+      <div class="inner">
+        <p class="inline">© 2012-2013 Intel Corporation.</p>
+        <ul class="footer_list">
+          <li class="footer_li"><a href="http://software.intel.com/en-us/articles/optimization-notice">Optimization Notice</a></li>
+          <li class="footer_li"><a href="http://www.intel.com/sites/corporate/tradmarx.htm">Legal Information</a></li>
+          <li class="footer_li"><a href="http://www.intel.com/content/www/us/en/privacy/intel-online-privacy-notice-summary.html">Privacy</a></li>
+        </ul>
+        <p>Intel and Cilk are trademarks of Intel Corporation in the U.S. and/or other countries.</p>
+        <p>Slate theme maintained by <a href="https://github.com/jsncostello">Jason Costello</a></p>
+      </div>
     </div>
-
     
 
   </body>
