--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Architecture: x86-64</p>
   <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <div class="inner">
-        <p class="inline">© 2012-2013 Intel Corporation.</p>
+        <p class="inline">© 2013 Intel Corporation.</p>
         <ul class="footer_list">
           <li class="footer_li"><a href="http://software.intel.com/en-us/articles/optimization-notice">Optimization Notice</a></li>
           <li class="footer_li"><a href="http://www.intel.com/sites/corporate/tradmarx.htm">Legal Information</a></li>
