--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Architecture: x86-64</p>
           <li class="footer_li"><a href="http://www.intel.com/sites/corporate/tradmarx.htm">Legal Information</a></li>
           <li class="footer_li"><a href="http://www.intel.com/content/www/us/en/privacy/intel-online-privacy-notice-summary.html">Privacy</a></li>
         </ul>
-        <p>Intel and Cilk are trademarks of Intel Corporation in the U.S. and/or other countries.</p>
+        <p>Intel is a trademark of Intel Corporation in the U.S. and/or other countries.</p>
         <p>Slate theme maintained by <a href="https://github.com/jsncostello">Jason Costello</a></p>
       </div>
     </div>
