--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="OpenMP 3.1/Clang : A very preliminary implementation of the OpenMP® C/C++ language extensions in Clang/LLVM compiler " />
+    <meta name="description" content="OpenMP 3.1/Clang : An implementation of the OpenMP® C/C++ language extensions in Clang/LLVM compiler " />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/clang-omp">View on GitHub</a>
 
           <h1 id="project_title">OpenMP 3.1/Clang</h1>
-          <h2 id="project_tagline">A very preliminary implementation of the OpenMP® C/C++ language extensions in Clang/LLVM compiler </h2>
+          <h2 id="project_tagline">An implementation of the OpenMP® C/C++ language extensions in Clang/LLVM compiler </h2>
 
         </header>
     </div>
