--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/clang-omp">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/clang-omp?tab=repositories">View on GitHub</a>
 
           <h1 id="project_title">OpenMP 3.1/Clang</h1>
           <h2 id="project_tagline">An implementation of the OpenMP® C/C++ language extensions in Clang/LLVM compiler </h2>
+          
+          <div id="downloads">
+            <a class="nav_link" href="#try-openmp-31clang">Try it!</a>
+            <a class="nav_link" href="#license">License</a>
+            <a class="nav_link" href="#contact">Contact</a>
+          </div>
 
         </header>
     </div>
