--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ int main(void) {
   return 0;
 }
 </code></pre>
+<script src="http://pastebin.com/embed_js.php?i=9setJXbD"></script>
 
 <p>Confirm that the compiler is working correctly by saving the above code code to a file.</p>
 
