--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ export LD_LIBRARY_PATH=/install/prefix/lib:&lt;OpenMP library path&gt;:$LD_LIBRA
 <h2>
 <a name="a-simple-example" class="anchor" href="#a-simple-example"><span class="octicon octicon-link"></span></a>A simple example</h2>
 
-<pre><script src="https://gist.github.com/clang-omp/89efe59c6f79ae2bc204.js"></script></pre>
+<script src="https://gist.github.com/clang-omp/89efe59c6f79ae2bc204.js"></script>
 
 <p>Confirm that the compiler is working correctly by saving the above code code to a file.</p>
 
