--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ $ ./OpenMP
 <h2>
 <a name="supported-platforms" class="anchor" href="#supported-platforms"><span class="octicon octicon-link"></span></a>Supported platforms</h2>
 
-<p>OS: Linux or Mac OS X
-Architecture: x86-64</p>
+<p>OS: Linux or Mac OS X</p>
+<p>Architecture: x86-64</p>
 
 <h2>
 <a name="known-issues" class="anchor" href="#known-issues"><span class="octicon octicon-link"></span></a>Known issues</h2>
