--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ $ ./OpenMP
 </ol><h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
-<p>LLVM, Clang, and Compiler-rt are distributed under LLVM's <a href="http://llvm.org/docs/DeveloperPolicy.html#license">"UIUC" BSD-Style license</a>. For details, including information about third-party components, see LICENSE.txt in the code repositories.</p>
+<p>LLVM, Clang, and Compiler-rt are distributed under LLVM's <a href="http://llvm.org/docs/DeveloperPolicy.html#license">the University of Illinois/NCSA Open Source License</a>. In addition to the UIUC license, the runtime library component of LLVM (compiler_rt) is also licensed under the <a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a>. For details, including information about third-party components, see LICENSE.txt in the code repositories.</p>
 
 <h2>
 <a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
