--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@ Architecture: x86-64</p>
 <p>We welcome contributions of all kinds: patches, code reviews, testing and bug reports.</p>
 
 <p>However, as any other open source project, we have to maintain some level of control to prevent complete chaos and
-keep a single architectural direction. You can always send your patches to Alexey Bataev (project admin) for review and
+keep a single architectural direction. You can send your patches to Alexey Bataev (project admin) for review and
 commit; also, we are very open with granting commit access rights to recognized members of Clang/LLVM community.
 </p>
 
-<p>We plan to eventually commit this OpenMP implementation to Clang trunk, where it will be governed by existing
+<p>We plan to eventually contribute this OpenMP implementation to Clang trunk, where it will be governed by existing
   Clang/LLVM community development policies.
 </p>
 
