Removed doubled "is is"

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ href="#contact">Contact</a> </div>
 
 <div id="main_content_wrap" class="outer">
 <section id=main_content class=inner>
-<p>OpenMP® (<u>O</u>pen <u>M</u>ulti-<u>P</u>rocessing) is is a specification
-for a set of compiler directives, library routines, and environment variables
-that can be used to specify shared memory parallelism in Fortran and C/C++
+<p>OpenMP® (<u>O</u>pen <u>M</u>ulti-<u>P</u>rocessing) is a specification for
+a set of compiler directives, library routines, and environment variables that
+can be used to specify shared memory parallelism in Fortran and C/C++
 programs.</p>
 
 <p>This project implements OpenMP support in the <a
