--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   content="OpenMP/Clang : An implementation of the OpenMP® C/C++ language extensions in Clang/LLVM compiler ">
   <link rel="stylesheet" type="text/css" media="screen"
   href="stylesheets/stylesheet.css">
-  <title>OpenMP/Clang</title>
+  <title>OpenMP®/Clang</title>
 </head>
 
 <body>
@@ -17,9 +17,9 @@
 <header class=inner><a id="forkme_banner"
 href="https://github.com/clang-omp?tab=repositories">View on GitHub</a> 
 
-<h1 id="project_title">OpenMP/Clang</h1>
+<h1 id="project_title">OpenMP®/Clang</h1>
 
-<h2 id="project_tagline">An implementation of the OpenMP® C/C++ language
+<h2 id="project_tagline">An implementation of the OpenMP C/C++ language
 extensions in Clang/LLVM compiler </h2>
 
 <div id="downloads">
@@ -32,19 +32,20 @@ href="#contact">Contact</a> </div>
 
 <div id="main_content_wrap" class="outer">
 <section id=main_content class=inner>
-<p>OpenMP® (<u>O</u>pen <u>M</u>ulti-<u>P</u>rocessing) is a specification for
+<p>The OpenMP (<u>O</u>pen <u>M</u>ulti-<u>P</u>rocessing)
+  specification is a standard for
 a set of compiler directives, library routines, and environment variables that
 can be used to specify shared memory parallelism in Fortran and C/C++
 programs.</p>
 
 <p>This project implements OpenMP support in the <a
 href="http://clang.llvm.org/">Clang</a> C language family frontend for the <a
-href="http://llvm.org/">LLVM</a> compiler. Current scope of the project is
-support for <a href="http://www.openmp.org/mp-documents/OpenMP3.1.pdf">OpenMP
+href="http://llvm.org/">LLVM</a> compiler. The current scope of the
+  project is to support the <a href="http://www.openmp.org/mp-documents/OpenMP3.1.pdf">OpenMP
 3.1</a> specification.</p>
 
-<p>We plan to eventually contribute this implementation to Clang trunk; first
-patches were already committed. In the meantime, you are welcome to try (and
+<p>We plan eventually to contribute this implementation to the Clang trunk; initial
+patches have already been committed. In the meantime, you are welcome to try (and
 contribute to!) the full OpenMP 3.1 implementation hosted here.</p>
 
 <h1><a name="news" class="anchor" href="#news"><span
@@ -64,14 +65,14 @@ $ git clone -b clang-omp https://github.com/clang-omp/compiler-rt llvm/projects/
 
 <p>The source code structure follows Clang/LLVM: <a
 href="http://llvm.org/docs/GettingStarted.html">http://llvm.org/docs/GettingStarted.html</a>.<br>
-Also you need to get and build an <a href="http://www.openmprtl.org/">Intel®
+To run (rather than just compile) code you need to get and build an <a href="http://www.openmprtl.org/">Intel®
 OpenMP* Runtime Library</a>.</p>
 
 <h2><a name="building" class="anchor" href="#building"><span
 class="octicon octicon-link"></span></a>Building</h2>
 
-<p>To build clang with OpenMP 3.1 support just follow standard building
-procedure of clang/LLVM compiler (see <a
+<p>To build clang with OpenMP 3.1 support just follow the clang/LLVM
+  compiler's standard build procedure (see <a
 href="http://clang.llvm.org/get_started.html">Getting Started: Building and
 Running Clang</a>).</p>
 
@@ -86,7 +87,7 @@ export CPLUS_INCLUDE_PATH=/install/prefix/include:&lt;OpenMP include path&gt;:$C
 export LIBRARY_PATH=/install/prefix/lib:&lt;OpenMP library path&gt;:$LIBRARY_PATH
 export LD_LIBRARY_PATH=/install/prefix/lib:&lt;OpenMP library path&gt;:$LD_LIBRARY_PATH</code></pre>
 
-<p>When you build a program that uses OpenMP®, add the following options to
+<p>When you build a program that uses OpenMP directives, add the following options to
 enable OpenMP support and link to the runtime library.</p>
 <pre><code>-Xclang -fopenmp -liomp5</code></pre>
 
@@ -96,7 +97,7 @@ class="octicon octicon-link"></span></a>A simple example</h2>
 src="https://gist.github.com/clang-omp/89efe59c6f79ae2bc204.js">
 </script>
 
-<p>Confirm that the compiler is working correctly by saving the above code code
+<p>Confirm that the compiler is working correctly by saving the above code 
 to a file.</p>
 <pre><code>$ clang -Xclang -fopenmp -liomp5 OpenMP.c -o OpenMP
 $ ./OpenMP</code></pre>
@@ -111,7 +112,7 @@ Architecture: x86-64</p>
 <h2><a name="known-issues" class="anchor" href="#known-issues"><span
 class="octicon octicon-link"></span></a>Known issues</h2>
 <ul>
-  <li>Using variable-length arrays in a OpenMP regions does not work yet.</li>
+  <li>Using variable-length arrays in an OpenMP region does not yet work.</li>
 </ul>
 
 <h2><a name="contribute" class="anchor" href="#contribute"><span
@@ -126,7 +127,7 @@ You can send your patches to Alexey Bataev (project admin) for review and
 commit; also, we are very open with granting commit access rights to recognized
 members of Clang/LLVM community. </p>
 
-<p>We plan to eventually contribute this OpenMP implementation to Clang trunk,
+<p>We plan eventually to contribute this OpenMP implementation to the Clang trunk,
 where it will be governed by existing Clang/LLVM community development
 policies. </p>
 
@@ -136,16 +137,17 @@ class="octicon octicon-link"></span></a>Status</h2>
 <p>Full support for <a
 href="http://www.openmp.org/mp-documents/OpenMP3.1.pdf">OpenMP 3.1</a> and some
 elements of <a href="http://www.openmp.org/mp-documents/OpenMP4.0.0.pdf">OpenMP
-4.0</a> are implemented . This implementation relies on Intel OpenMP API, and
-should be used along with Intel® OpenMP* Runtime Library that supports such API
+4.0</a> are implemented. This implementation relies on the Intel OpenMP API, and
+should be used along with Intel® OpenMP* Runtime Library that supports that API
 (available from <a href="http://www.openmprtl.org/">www.openmprtl.org</a>). </p>
 
 <p>The following openly available OpenMP test suites pass: TODO. </p>
 
 <h2>Attention!</h2>
 
-<p>This is very pleminary version with a lot of hacks and this is not a final
-version. We plan code refactoring before commit it into Clang/LLVM trunk.</p>
+<p>This is very preliminary version with a lot of hacks and is
+  certainly not a final, production version. We plan code refactoring
+  before it is committed to the Clang/LLVM trunk.</p>
 
 <h2><a name="license" class="anchor" href="#license"><span
 class="octicon octicon-link"></span></a>License</h2>
