--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ class="octicon octicon-link"></span></a>Try OpenMP/Clang</h1>
 href="#getting-the-source-code"><span
 class="octicon octicon-link"></span></a>Getting the source code</h2>
 <pre><code>$ git clone https://github.com/clang-omp/llvm
-$ git clone https://github.com/clang-omp/clang llvm/tools/clang
-$ git clone -b clang-omp https://github.com/clang-omp/compiler-rt llvm/projects/compiler-rt</code></pre>
+$ git clone https://github.com/clang-omp/compiler-rt llvm/projects/compiler-rt
+$ git clone -b clang-omp https://github.com/clang-omp/clang llvm/tools/clang</code></pre>
 
-<p>The source code structure follows Clang/LLVM: <a
+<p>he source code structure follows Clang/LLVM: <a
 href="http://llvm.org/docs/GettingStarted.html">http://llvm.org/docs/GettingStarted.html</a>.<br>
 To run (rather than just compile) code you need to get and build an <a
 href="http://www.openmprtl.org/">Intel® OpenMP* Runtime Library</a>.</p>
