Date of initial release.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ to try (and contribute to!) the full OpenMP 3.1 implementation hosted here.</p>
 <h1><a name="news" class="anchor" href="#news"><span
 class="octicon octicon-link"></span></a>News</h1>
 
-<p>-.-.- Initial release.</p>
+<p>August 23, 2013 - Initial release.</p>
 
 <h1><a name="try-openmp-clang" class="anchor" href="#try-openmp-clang"><span
 class="octicon octicon-link"></span></a>Try OpenMP/Clang</h1>
@@ -63,7 +63,7 @@ class="octicon octicon-link"></span></a>Getting the source code</h2>
 $ git clone https://github.com/clang-omp/compiler-rt llvm/projects/compiler-rt
 $ git clone -b clang-omp https://github.com/clang-omp/clang llvm/tools/clang</code></pre>
 
-<p>he source code structure follows Clang/LLVM: <a
+<p>The source code structure follows Clang/LLVM: <a
 href="http://llvm.org/docs/GettingStarted.html">http://llvm.org/docs/GettingStarted.html</a>.<br>
 To run (rather than just compile) code you need to get and build an <a
 href="http://www.openmprtl.org/">Intel® OpenMP* Runtime Library</a>.</p>
