Updated test results.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,13 @@ and should be used along with Intel® OpenMP* Runtime Library that supports that
 API (available from <a href="http://www.openmprtl.org/">www.openmprtl.org</a>).
 </p>
 
-<p>The following openly available OpenMP test suites pass: TODO. </p>
+<p>The following openly available OpenMP test suites pass:</p>
+<ul>
+  <li><a href="http://web.cs.uh.edu/~openuh/download/">OpenMP Validation
+    Suite</a> by OpenUH Research Compiler - passed 119 tests of 123.</li>
+</ul>
+
+<p> </p>
 
 <h2>Attention!</h2>
 
