--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="description"
-  content="OpenMP/Clang : An implementation of the OpenMP® C/C++ language extensions in Clang/LLVM compiler ">
+  content="OpenMP/Clang : An implementation of the OpenMPï¿½ C/C++ language extensions in Clang/LLVM compiler ">
   <link rel="stylesheet" type="text/css" media="screen"
   href="stylesheets/stylesheet.css">
-  <title>OpenMP®/Clang</title>
+  <title>OpenMPï¿½/Clang</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 <header class=inner><a id="forkme_banner"
 href="https://github.com/clang-omp?tab=repositories">View on GitHub</a> 
 
-<h1 id="project_title">OpenMP®/Clang</h1>
+<h1 id="project_title">OpenMPï¿½/Clang</h1>
 
 <h2 id="project_tagline">An implementation of the OpenMP C/C++ language
 extensions in Clang/LLVM compiler </h2>
@@ -66,7 +66,7 @@ $ git clone -b clang-omp https://github.com/clang-omp/clang llvm/tools/clang</co
 <p>The source code structure follows Clang/LLVM: <a
 href="http://llvm.org/docs/GettingStarted.html">http://llvm.org/docs/GettingStarted.html</a>.<br>
 To run (rather than just compile) code you need to get and build an <a
-href="http://www.openmprtl.org/">Intel® OpenMP* Runtime Library</a>.</p>
+href="http://www.openmprtl.org/">Intelï¿½ OpenMP* Runtime Library</a>.</p>
 
 <h2><a name="building" class="anchor" href="#building"><span
 class="octicon octicon-link"></span></a>Building</h2>
@@ -102,21 +102,8 @@ file.</p>
 <pre><code>$ clang -Xclang -fopenmp -liomp5 OpenMP.c -o OpenMP
 $ ./OpenMP</code></pre>
 
-<h2><a name="supported-platforms" class="anchor"
-href="#supported-platforms"><span
-class="octicon octicon-link"></span></a>Supported platforms</h2>
-
-<p>OS: Linux or Mac OS X<br>
-Architecture: x86-64</p>
-
-<h2><a name="known-issues" class="anchor" href="#known-issues"><span
-class="octicon octicon-link"></span></a>Known issues</h2>
-<ul>
-  <li>Using variable-length arrays in an OpenMP region does not yet work.</li>
-</ul>
-
-<h2><a name="contribute" class="anchor" href="#contribute"><span
-class="octicon octicon-link"></span></a>Contribute</h2>
+<h1><a name="contribute" class="anchor" href="#contribute"><span
+class="octicon octicon-link"></span></a>Contribute</h1>
 
 <p>We welcome contributions of all kinds: patches, code reviews, testing and
 bug reports.</p>
@@ -131,14 +118,14 @@ members of Clang/LLVM community. </p>
 trunk, where it will be governed by existing Clang/LLVM community development
 policies. </p>
 
-<h2><a name="status" class="anchor" href="#status"><span
-class="octicon octicon-link"></span></a>Status</h2>
+<h1><a name="status" class="anchor" href="#status"><span
+class="octicon octicon-link"></span></a>Status</h1>
 
 <p>Full support for <a
 href="http://www.openmp.org/mp-documents/OpenMP3.1.pdf">OpenMP 3.1</a> and some
 elements of <a href="http://www.openmp.org/mp-documents/OpenMP4.0.0.pdf">OpenMP
 4.0</a> are implemented. This implementation relies on the Intel OpenMP API,
-and should be used along with Intel® OpenMP* Runtime Library that supports that
+and should be used along with Intelï¿½ OpenMP* Runtime Library that supports that
 API (available from <a href="http://www.openmprtl.org/">www.openmprtl.org</a>).
 </p>
 
@@ -148,16 +135,36 @@ API (available from <a href="http://www.openmprtl.org/">www.openmprtl.org</a>).
     Suite</a> by OpenUH Research Compiler - passed 119 tests of 123.</li>
 </ul>
 
+<h2><a name="supported-platforms" class="anchor"
+href="#supported-platforms"><span
+class="octicon octicon-link"></span></a>Supported platforms</h2>
+
+<p>OS: Linux or Mac OS X<br>
+Architecture: x86-64</p>
+
+<h2><a name="known-issues" class="anchor" href="#known-issues"><span
+class="octicon octicon-link"></span></a>Known issues</h2>
+<ul>
+  <li>Using variable-length arrays in an OpenMP region does not yet work.</li>
+</ul>
+
 <p> </p>
 
-<h2>Attention!</h2>
+<h2>Important Note</h2>
 
-<p>This is very preliminary version with a lot of hacks and is certainly not a
-final, production version. We plan code refactoring before it is committed to
-the Clang/LLVM trunk.</p>
+<p>Please note that this is a preliminary version. While everything is
+carefully tested and works fine, there are known internal design quality
+issues. We plan to refacture some parts of the code before submitting them to
+Clang trunk. And yes, any help with this is welcome!
+<p>
+Among known design issues are:
+<ul>
+<li>FIXME</li>
+</ul>
+</p>
 
-<h2><a name="license" class="anchor" href="#license"><span
-class="octicon octicon-link"></span></a>License</h2>
+<h1><a name="license" class="anchor" href="#license"><span
+class="octicon octicon-link"></span></a>License</h1>
 
 <p><strong>LLVM</strong>, <strong>Clang</strong>, and
 <strong>Compiler-rt</strong> are distributed under LLVM's <a
@@ -170,8 +177,8 @@ href="http://www.opensource.org/licenses/mit-license.php">MIT License</a>. For
 details, including information about third-party components, see LICENSE.txt in
 the code repositories.</p>
 
-<h2><a name="contact" class="anchor" href="#contact"><span
-class="octicon octicon-link"></span></a>Contact</h2>
+<h1><a name="contact" class="anchor" href="#contact"><span
+class="octicon octicon-link"></span></a>Contact</h1>
 
 <p>If you would like to report a bug, or make a feature request, you can submit
 an issue in Github <a
@@ -182,7 +189,7 @@ href="https://github.com/clang-omp/clang/issues">here</a>.</p>
 <div id="footer_wrap" class="outer">
 
 <div class="inner">
-<p class="inline">© 2013 Intel Corporation.</p>
+<p class="inline">ï¿½ 2013 Intel Corporation.</p>
 <ul class="footer_list">
   <li class="footer_li"><a
     href="http://software.intel.com/en-us/articles/optimization-notice">Optimization
