--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ class="octicon octicon-link"></span></a>Known issues</h2>
 <p>Please note that this is a preliminary version. While everything is
 carefully tested and works fine, there are known internal design quality
 issues. We plan to refacture some parts of the code before submitting them to
-Clang trunk. And yes, any help with this is welcome!
+Clang trunk. And yes, any help with this would be appreciated!
 <p>
 Among known design issues are:
 <ul>
@@ -189,7 +189,7 @@ href="https://github.com/clang-omp/clang/issues">here</a>.</p>
 <div id="footer_wrap" class="outer">
 
 <div class="inner">
-<p class="inline">&copy;2013 Intel Corporation.</p>
+<p class="inline">&copy; 2013 Intel Corporation.</p>
 <ul class="footer_list">
   <li class="footer_li"><a
     href="http://software.intel.com/en-us/articles/optimization-notice">Optimization
