--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@ bug reports.</p>
 
 <p>However, as any other open source project, we have to maintain some level of
 control to prevent complete chaos and keep a single architectural direction.
-You can send your patches to Alexey Bataev (project admin) for review and
-commit; also, we are very open with granting commit access rights to recognized
-members of Clang/LLVM community. </p>
+You can send your patches to <a href="a.bataev@hotmail.com">Alexey Bataev</a>
+(project admin) for review and commit; also, we are very open with granting
+commit access rights to recognized members of Clang/LLVM community. </p>
 
 <p>We plan eventually to contribute this OpenMP implementation to the Clang
 trunk, where it will be governed by existing Clang/LLVM community development
@@ -159,7 +159,16 @@ Clang trunk. And yes, any help with this would be appreciated! </p>
 
 <p>Among known design issues are: </p>
 <ul>
-  <li>FIXME</li>
+  <li>Combined constructs ('#pragma omp parallel for' and '#pragma omp parallel
+    sections''). Currently these constructs are represented as a pair of
+    '#pragma omp parallel' and '#pragma omp for/sections' constructs. These
+    solution leads to ugly representation in AST because of the troubles with
+    the variables capturing.</li>
+  <li>Calculation of iteration indices for '#pragma omp for' is not quite
+    optimal. AST representation of this construct also is not very good and
+    should be re-designed.</li>
+  <li>Analysis of atomic constructs and loops should be reworked for better
+    diagnostics and readbaility.</li>
 </ul>
 
 <h1><a name="license" class="anchor" href="#license"><span
