--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@ bug reports.</p>
 
 <p>However, as any other open source project, we have to maintain some level of
 control to prevent complete chaos and keep a single architectural direction.
-You can send your patches to <a href="a.bataev@hotmail.com">Alexey Bataev</a>
-(project admin) for review and commit; also, we are very open with granting
-commit access rights to recognized members of Clang/LLVM community. </p>
+You can send your patches to <a href="mailto:a.bataev@hotmail.com">Alexey
+Bataev</a> (project admin) for review and commit; also, we are very open with
+granting commit access rights to recognized members of Clang/LLVM community.
+</p>
 
 <p>We plan eventually to contribute this OpenMP implementation to the Clang
 trunk, where it will be governed by existing Clang/LLVM community development
