--- a/index.html
+++ b/index.html
@@ -1,221 +1,164 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <meta name="description"
-  content="OpenMP/Clang: An implementation of the OpenMP(R) C/C++ language extensions in Clang/LLVM compiler ">
-  <link rel="stylesheet" type="text/css" media="screen"
-  href="stylesheets/stylesheet.css">
-  <title>OpenMP®/Clang</title>
-</head>
-
-<body>
-<!-- HEADER -->
-
-<div id="header_wrap" class="outer">
-<header class=inner><a id="forkme_banner"
-href="https://github.com/clang-omp?tab=repositories">View on GitHub</a> 
-
-<h1 id="project_title">OpenMP®/Clang</h1>
-
-<h2 id="project_tagline">An implementation of the OpenMP C/C++ language
-extensions in Clang/LLVM compiler </h2>
-
-<div id="downloads">
-<a class="nav_link" href="#try-openmp-clang">Try it!</a> <a class="nav_link"
-href="#contribute">Contribute</a> <a class="nav_link" href="#status">Status</a>
-<a class="nav_link" href="#license">License</a> <a class="nav_link"
-href="#contact">Contact</a> </div>
-</header></div>
-<!-- MAIN CONTENT -->
-
-<div id="main_content_wrap" class="outer">
-<section id=main_content class=inner>
-<p>The OpenMP (<u>O</u>pen <u>M</u>ulti-<u>P</u>rocessing) specification is a
-standard for a set of compiler directives, library routines, and environment
-variables that can be used to specify shared memory parallelism in Fortran and
-C/C++ programs.</p>
-
-<p>This project implements OpenMP support in the <a
-href="http://clang.llvm.org/">Clang</a> C language family frontend for the <a
-href="http://llvm.org/">LLVM</a> compiler. The current scope of the project is
-to support the <a
-href="http://www.openmp.org/mp-documents/OpenMP3.1.pdf">OpenMP 3.1</a>
-specification.</p>
-
-<p>We plan eventually to contribute this implementation to the Clang trunk;
-initial patches have already been committed. In the meantime, you are welcome
-to try (and contribute to!) the full OpenMP 3.1 implementation hosted here.</p>
-
-<h1><a name="news" class="anchor" href="#news"><span
-class="octicon octicon-link"></span></a>News</h1>
-
-<p>August 23, 2013 - Initial release.</p>
-
-<h1><a name="try-openmp-clang" class="anchor" href="#try-openmp-clang"><span
-class="octicon octicon-link"></span></a>Try OpenMP/Clang</h1>
-
-<h2><a name="getting-the-source-code" class="anchor"
-href="#getting-the-source-code"><span
-class="octicon octicon-link"></span></a>Getting the source code</h2>
-<pre><code>$ git clone https://github.com/clang-omp/llvm
+<html lang="en-us">
+  <head>
+    <meta content="text/html; charset=iso-8859-1" http-equiv="content-type">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="OpenMP/Clang: An implementation of the OpenMP(R) C/C++ language extensions in Clang/LLVM compiler ">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <title>OpenMP&reg;/Clang</title>
+    <meta content="Intel Corporation" name="author">
+    <meta content="clang, LLVM, OpenMP" name="keywords">
+  </head>
+  <body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+      <header class="inner"><a id="forkme_banner" href="https://github.com/clang-omp?tab=repositories">View
+          on GitHub</a>
+        <h1 id="project_title">OpenMP&reg;/Clang</h1>
+        <h2 id="project_tagline">An implementation of the OpenMP C/C++ language
+          extensions in Clang/LLVM compiler </h2>
+        <div id="downloads"> <a class="nav_link" href="#try-openmp-clang">Try
+            it!</a> <a class="nav_link" href="#contribute">Contribute</a> <a class="nav_link"
+            href="#status">Status</a> <a class="nav_link" href="#license">License</a>
+          <a class="nav_link" href="#contact">Contact</a> </div>
+      </header>
+    </div>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p>The OpenMP (<u>O</u>pen <u>M</u>ulti-<u>P</u>rocessing)
+          specification is a standard for a set of compiler directives, library
+          routines, and environment variables that can be used to specify shared
+          memory parallelism in Fortran and C/C++ programs.</p>
+        <p>This project implements OpenMP support in the <a href="http://clang.llvm.org/">Clang</a>
+          C language family front-end for the <a href="http://llvm.org/">LLVM</a>
+          compiler. The current scope of the project is to support the <a href="http://www.openmp.org/mp-documents/OpenMP3.1.pdf">OpenMP
+            3.1</a> specification.</p>
+        <p>We plan eventually to contribute this implementation to the Clang
+          trunk; initial patches have already been committed. In the meantime,
+          you are welcome to try (and contribute to!) the full OpenMP 3.1
+          implementation hosted here.</p>
+        <h1><a name="news" class="anchor" href="#news"><span class="octicon octicon-link"></span></a>News</h1>
+        <p>August 23, 2013 - Initial release.</p>
+        <h1><a name="try-openmp-clang" class="anchor" href="#try-openmp-clang"><span
+              class="octicon octicon-link"></span></a>Try OpenMP/Clang</h1>
+        <h2><a name="getting-the-source-code" class="anchor" href="#getting-the-source-code"><span
+              class="octicon octicon-link"></span></a>Getting the source code</h2>
+        <pre><code>$ git clone https://github.com/clang-omp/llvm
 $ git clone https://github.com/clang-omp/compiler-rt llvm/projects/compiler-rt
 $ git clone -b clang-omp https://github.com/clang-omp/clang llvm/tools/clang</code></pre>
-
-<p>The source code structure follows Clang/LLVM: <a
-href="http://llvm.org/docs/GettingStarted.html">http://llvm.org/docs/GettingStarted.html</a>.<br>
-To run (rather than just compile) code you need to get and build an <a
-href="http://www.openmprtl.org/">Intel® OpenMP* Runtime Library</a>.</p>
-
-<h2><a name="building" class="anchor" href="#building"><span
-class="octicon octicon-link"></span></a>Building</h2>
-
-<p>To build clang with OpenMP 3.1 support just follow the clang/LLVM compiler's
-standard build procedure (see <a
-href="http://clang.llvm.org/get_started.html">Getting Started: Building and
-Running Clang</a>).</p>
-
-<h2><a name="using" class="anchor" href="#using"><span
-class="octicon octicon-link"></span></a>Using</h2>
-
-<p>To use the newly installed compiler, add the following to your environment.
-On Mac OS X, replace LD_LIBRARY_PATH with DYLD_LIBRARY_PATH.</p>
-<pre><code>export PATH=/install/prefix/bin:$PATH
+        <p>The source code structure follows Clang/LLVM: <a href="http://llvm.org/docs/GettingStarted.html">http://llvm.org/docs/GettingStarted.html</a>.<br>
+          To run (rather than just compile) code you need to get and build an <a
+            href="http://www.openmprtl.org/">Intel&reg; OpenMP* Runtime Library</a>.</p>
+        <h2><a name="building" class="anchor" href="#building"><span class="octicon octicon-link"></span></a>Building</h2>
+        <p>To build clang with OpenMP 3.1 support just follow the clang/LLVM
+          compiler's standard build procedure (see <a href="http://clang.llvm.org/get_started.html">Getting
+            Started: Building and Running Clang</a>).</p>
+        <h2><a name="using" class="anchor" href="#using"><span class="octicon octicon-link"></span></a>Using</h2>
+        <p>To use the newly installed compiler, add the following to your
+          environment. On Mac OS X, replace LD_LIBRARY_PATH with
+          DYLD_LIBRARY_PATH.</p>
+        <pre><code>export PATH=/install/prefix/bin:$PATH
 export C_INCLUDE_PATH=/install/prefix/include:&lt;OpenMP include path&gt;:$C_INCLUDE_PATH
 export CPLUS_INCLUDE_PATH=/install/prefix/include:&lt;OpenMP include path&gt;:$CPLUS_INCLUDE_PATH
 export LIBRARY_PATH=/install/prefix/lib:&lt;OpenMP library path&gt;:$LIBRARY_PATH
 export LD_LIBRARY_PATH=/install/prefix/lib:&lt;OpenMP library path&gt;:$LD_LIBRARY_PATH</code></pre>
-
-<p>When you build a program that uses OpenMP directives, add the following
-options to enable OpenMP support and link to the runtime library.</p>
-<pre><code>-fopenmp</code></pre>
-
-<h2><a name="a-simple-example" class="anchor" href="#a-simple-example"><span
-class="octicon octicon-link"></span></a>A simple example</h2>
-<script type="text/javascript"
-src="https://gist.github.com/clang-omp/89efe59c6f79ae2bc204.js">
-</script>
-
-<p>Confirm that the compiler is working correctly by saving the above code to a
-file.</p>
-<pre><code>$ clang -fopenmp OpenMP.c -o OpenMP
+        <p>When you build a program that uses OpenMP directives, add the
+          following options to enable OpenMP support and link to the runtime
+          library.</p>
+        <pre><code>-fopenmp</code></pre>
+        <h2><a name="a-simple-example" class="anchor" href="#a-simple-example"><span
+              class="octicon octicon-link"></span></a>A simple example</h2>
+        <script type="text/javascript" src="https://gist.github.com/clang-omp/89efe59c6f79ae2bc204.js">
+</script> <p>Confirm that the compiler is working correctly by saving the above
+          code to a file.</p>
+        <pre><code>$ clang -fopenmp OpenMP.c -o OpenMP
 $ ./OpenMP</code></pre>
-
-<h1><a name="contribute" class="anchor" href="#contribute"><span
-class="octicon octicon-link"></span></a>Contribute</h1>
-
-<p>We welcome contributions of all kinds: patches, code reviews, testing and
-bug reports.</p>
-
-<p>However, as any other open source project, we have to maintain some level of
-control to prevent complete chaos and keep a single architectural direction.
-You can send your patches to <a href="mailto:a.bataev@hotmail.com">Alexey
-Bataev</a> (project admin) for review and commit; also, we are very open with
-granting commit access rights to recognized members of Clang/LLVM community.
-</p>
-
-<p>We plan eventually to contribute this OpenMP implementation to the Clang
-trunk, where it will be governed by existing Clang/LLVM community development
-policies. </p>
-
-<h1><a name="status" class="anchor" href="#status"><span
-class="octicon octicon-link"></span></a>Status</h1>
-
-<p>Full support for <a
-href="http://www.openmp.org/mp-documents/OpenMP3.1.pdf">OpenMP 3.1</a> and some
-elements of <a href="http://www.openmp.org/mp-documents/OpenMP4.0.0.pdf">OpenMP
-4.0</a> are implemented. This implementation relies on the Intel OpenMP API,
-and should be used along with Intel® OpenMP* Runtime Library that supports that
-API (available from <a href="http://www.openmprtl.org/">www.openmprtl.org</a>).
-</p>
-
-<p>The following openly available OpenMP test suites pass:</p>
-<ul>
-  <li><a href="http://web.cs.uh.edu/~openuh/download/">OpenMP Validation
-    Suite</a> by OpenUH Research Compiler - passed 119 tests of 123.</li>
-</ul>
-
-<h2><a name="supported-platforms" class="anchor"
-href="#supported-platforms"><span
-class="octicon octicon-link"></span></a>Supported platforms</h2>
-
-<p>OS: Linux or Mac OS X<br>
-Architecture: x86-64</p>
-
-<h2><a name="known-issues" class="anchor" href="#known-issues"><span
-class="octicon octicon-link"></span></a>Known issues</h2>
-<ul>
-  <li>Using variable-length arrays in an OpenMP region does not yet work.</li>
-</ul>
-
-<p></p>
-
-<h2>Important Note</h2>
-
-<p>Please note that this is a preliminary version. While everything is
-carefully tested and works fine, there are known internal design quality
-issues. We plan to refacture some parts of the code before submitting them to
-Clang trunk. And yes, any help with this would be appreciated! </p>
-
-<p>Among known design issues are: </p>
-<ul>
-  <li>Combined constructs ('#pragma omp parallel for' and '#pragma omp parallel
-    sections''). Currently these constructs are represented as a pair of
-    '#pragma omp parallel' and '#pragma omp for/sections' constructs. These
-    solution leads to ugly representation in AST because of the troubles with
-    the variables capturing.</li>
-  <li>Calculation of iteration indices for '#pragma omp for' is not quite
-    optimal. AST representation of this construct also is not very good and
-    should be re-designed.</li>
-  <li>Analysis of atomic constructs and loops should be reworked for better
-    diagnostics and readbaility.</li>
-</ul>
-
-<h1><a name="license" class="anchor" href="#license"><span
-class="octicon octicon-link"></span></a>License</h1>
-
-<p><strong>LLVM</strong>, <strong>Clang</strong>, and
-<strong>Compiler-rt</strong> are distributed under LLVM's <a
-href="http://llvm.org/docs/DeveloperPolicy.html#license">the University of
-Illinois/NCSA Open Source License</a>. In addition to the <a
-href="http://www.opensource.org/licenses/UoI-NCSA.php">"UIUC" BSD-Style
-license</a> license, the runtime library component of LLVM
-(<strong>Compiler_rt</strong>) is also licensed under the <a
-href="http://www.opensource.org/licenses/mit-license.php">MIT License</a>. For
-details, including information about third-party components, see LICENSE.txt in
-the code repositories.</p>
-
-<h1><a name="contact" class="anchor" href="#contact"><span
-class="octicon octicon-link"></span></a>Contact</h1>
-
-<p>If you would like to report a bug, or make a feature request, you can submit
-an issue in Github <a
-href="https://github.com/clang-omp/clang/issues">here</a>.</p>
-</section></div>
-<!-- FOOTER -->
-
-<div id="footer_wrap" class="outer">
-
-<div class="inner">
-<p class="inline">© 2013 Intel Corporation.</p>
-<ul class="footer_list">
-  <li class="footer_li"><a
-    href="http://software.intel.com/en-us/articles/optimization-notice">Optimization
-    Notice</a></li>
-  <li class="footer_li"><a
-    href="http://www.intel.com/sites/corporate/tradmarx.htm">Legal
-    Information</a></li>
-  <li class="footer_li"><a
-    href="http://www.intel.com/content/www/us/en/privacy/intel-online-privacy-notice-summary.html">Privacy</a></li>
-</ul>
-
-<p>Intel is a trademark of Intel Corporation in the U.S. and/or other
-countries.</p>
-
-<p>Slate theme maintained by <a href="https://github.com/jsncostello">Jason
-Costello</a></p>
-</div>
-</div>
-</body>
+        <h1><a name="contribute" class="anchor" href="#contribute"><span class="octicon octicon-link"></span></a>Contribute</h1>
+        <p>We welcome contributions of all kinds: patches, code reviews, testing
+          and bug reports.</p>
+        <p>However, as any other open source project, we have to maintain some
+          level of control to prevent complete chaos and keep a single
+          architectural direction. You can send your patches to <a href="mailto:a.bataev@hotmail.com">Alexey
+            Bataev</a> (project admin) for review and commit; also, we are very
+          open with granting commit access rights to recognized members of
+          Clang/LLVM community. </p>
+        <p>We plan eventually to contribute this OpenMP implementation to the
+          Clang trunk, where it will be governed by existing Clang/LLVM
+          community development policies. </p>
+        <h1><a name="status" class="anchor" href="#status"><span class="octicon octicon-link"></span></a>Status</h1>
+        <p>Full support for <a href="http://www.openmp.org/mp-documents/OpenMP3.1.pdf">OpenMP
+            3.1</a> and some elements of <a href="http://www.openmp.org/mp-documents/OpenMP4.0.0.pdf">OpenMP
+            4.0</a> are implemented. This implementation relies on the Intel
+          OpenMP API, and should be used along with Intel&reg; OpenMP* Runtime
+          Library that supports that API (available from <a href="http://www.openmprtl.org/">www.openmprtl.org</a>).
+          </p>
+        <p>The following openly available OpenMP test suites pass:</p>
+        <ul>
+          <li><a href="http://web.cs.uh.edu/%7Eopenuh/download/">OpenMP
+              Validation Suite</a> by OpenUH Research Compiler - passed 119
+            tests of 123.</li>
+        </ul>
+        <h2><a name="supported-platforms" class="anchor" href="#supported-platforms"><span
+              class="octicon octicon-link"></span></a>Supported platforms</h2>
+        <p>OS: Linux or Mac OS X<br>
+          Architecture: x86-64</p>
+        <h2><a name="known-issues" class="anchor" href="#known-issues"><span class="octicon octicon-link"></span></a>Known
+          issues</h2>
+        <ul>
+          <li>Using variable-length arrays in an OpenMP region does not yet
+            work.</li>
+        </ul>
+        <h2>Important Note</h2>
+        <p>Please note that this is a preliminary version. While everything is
+          carefully tested and works fine, there are known internal design
+          quality issues. We plan to refactor some parts of the code before
+          submitting them to Clang trunk. And yes, any help with this would be
+          appreciated! </p>
+        <p>Among known design issues are: </p>
+        <ul>
+          <li>Combined constructs (<code>#pragma omp parallel for</code> and <code>#pragma
+              omp parallel sections</code>). Currently these constructs are
+            represented as a pair of <code>#pragma omp parallel</code> and <code>#pragma
+              omp for/sections</code> constructs. These solution leads to ugly
+            representation in AST because of the troubles with the variables
+            capturing.</li>
+          <li>Calculation of iteration indices for <code>#pragma omp for</code>
+            is not quite optimal. AST representation of this construct also is
+            not very good and should be re-designed.</li>
+          <li>Analysis of atomic constructs and loops should be reworked for
+            better diagnostics and readability.</li>
+        </ul>
+        <h1><a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h1>
+        <p><strong>LLVM</strong>, <strong>Clang</strong>, and <strong>Compiler-rt</strong>
+          are distributed under LLVM's <a href="http://llvm.org/docs/DeveloperPolicy.html#license">the
+            University of Illinois/NCSA Open Source License</a>. In addition to
+          the <a href="http://www.opensource.org/licenses/UoI-NCSA.php">"UIUC"
+            BSD-Style license</a> license, the runtime library component of LLVM
+          (<strong>Compiler_rt</strong>) is also licensed under the <a href="http://www.opensource.org/licenses/mit-license.php">MIT
+            License</a>. For details, including information about third-party
+          components, see LICENSE.txt in the code repositories.</p>
+        <h1><a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h1>
+        <p>If you would like to report a bug, or make a feature request, you can
+          submit an issue in Github <a href="https://github.com/clang-omp/clang/issues">here</a>.</p>
+      </section>
+    </div>
+    <!-- FOOTER -->
+    <div id="footer_wrap" class="outer">
+      <div class="inner">
+        <p class="inline">&copy; 2013 Intel Corporation.</p>
+        <ul class="footer_list">
+          <li class="footer_li"><a href="http://software.intel.com/en-us/articles/optimization-notice">Optimization
+              Notice</a></li>
+          <li class="footer_li"><a href="http://www.intel.com/sites/corporate/tradmarx.htm">Legal
+              Information</a></li>
+          <li class="footer_li"><a href="http://www.intel.com/content/www/us/en/privacy/intel-online-privacy-notice-summary.html">Privacy</a></li>
+        </ul>
+        <p>Intel is a trademark of Intel Corporation in the U.S. and/or other
+          countries.</p>
+        <p>Slate theme maintained by <a href="https://github.com/jsncostello">Jason
+            Costello</a></p>
+      </div>
+    </div>
+  </body>
 </html>
