Removed mail address.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ $ ./OpenMP</code></pre>
           and bug reports.</p>
         <p>However, as any other open source project, we have to maintain some
           level of control to prevent complete chaos and keep a single
-          architectural direction. You can send your patches to <a href="mailto:a.bataev@hotmail.com">Alexey
+          architectural direction. You can send your patches to <a href="https://github.com/clang-omp/clang/issues">Alexey
             Bataev</a> (project admin) for review and commit; also, we are very
           open with granting commit access rights to recognized members of
           Clang/LLVM community. </p>
